# AudioDevExamples

./: .gitignore  CMakeLists.txt
CMake/: FindJUCE-GIT.cmake
Plugins/: CMakeLists.txt
Plugins/BasicMidiEffect/: CMakeLists.txt  MidiEffect.jucer
Plugins/BasicMidiEffect/JuceLibraryCode/: AppConfig.h  JuceHeader.h
Plugins/BasicMidiEffect/Source/: MidiProcessor.cpp  MidiProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/DynamicParameters/: CMakeLists.txt  DynamicParameters.jucer
Plugins/DynamicParameters/JuceLibraryCode/: AppConfig.h  JuceHeader.h
Plugins/DynamicParameters/Source/: CustomProcessor.h  ParameterHelpers.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Standalone/: CMakeLists.txt
Standalone/ConsoleToot/: CMakeLists.txt  ConsoleToot.jucer  README.md
Standalone/ConsoleToot/Source/: AudioCallback.h  ConsoleToot.h  Main.cpp
Standalone/LoadingSVG/: CMakeLists.txt  LoadingSVG.jucer
Standalone/LoadingSVG/JuceLibraryCode/: AppConfig.h  JuceHeader.h
Standalone/LoadingSVG/Source/: Main.cpp  MainComponent.h  SVGDisplay.h
